# nano-llm

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: transformer_block_comparison.puml
scripts/: generate.py
src/nano_llm/: __init__.py
src/nano_llm/inference/: __init__.py  generator.py
src/nano_llm/model/: __init__.py  attention.py  feed_forward.py  layer_norm.py  transformer.py  transformer_block.py
src/nano_llm/utils/: __init__.py  helpers.py
tests/: test_transformer.py
