[project]
name = "nano-llm"
version = "0.1.0"
description = "A tiny LLM implementation from scratch"
requires-python = ">=3.10"
dependencies = [
    "datasets",
    "pyyaml",
    "torch",
    "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nano_llm"]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]
